service BetService {
  rpc SettleEndedEvent (SettleEndedEventRequest) returns (SettleEndedEventResponse);
}

message SettleEndedEventRequest {
  required string eventId = 1;
  required string result = 2;
}

message SettleEndedEventResponse {
  required bool OK = 1;
}